tests/TBCWPATest/TypeErrorContainer/TXTypeErrorClassParent.php
<?php

namespace Bellisq\ContainerWithProvider\Tests\TBCWPATest\TypeErrorContainer;


class TXTypeErrorClassParent
{
    
}
